# lilypondx

./: .gitignore  Cargo.toml  talk.md  tests_err.txt
doc/: dot.md  example.md
src/: audio.rs  error.rs  lib.rs  ly_gen.rs  main.rs  midi_file.rs  note.rs  parser.rs  score.rs  sparkline.rs  synth.rs  tui.rs
tests/: _dump_output.txt  claire_of_glass.ly  claire_of_glass.md  lilypondx_demo.md  line_test.md  mata_ashita_consistency.rs  parse.rs  pipeline.rs  playhead.rs  render.rs  render_test.md  sparkline_demo.md  wip.md
tests/common/: mod.rs
tests/data/: Mata Ashita!-guitar.md  Mata Ashita!.md  bass.md  frontmatter.md  no_tracks.md  parse_octave_rest_tie.md  parse_relative.md  parse_rests_bars.md  pipeline_multitrack.md  render_ascending.md  render_chromatic.md  twinkle.md
tests/ly/: Mata Ashita!.md  demo-v1.md  demo-v2.md  rand01.md  rand02.md
